figuring out how git works, nothing of substance changed

--- a/main.html
+++ b/main.html
@@ -10,26 +10,17 @@
 	</head>
 	<body>
 		<div id='cssmenu'>
-			<ul>
-			   <li class='active'><a href='main.html'><span>Home</span></a></li>
-			   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
-			   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
-			   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
-			   <li class='media'><a href=#><span>Twitter</span></a></li>
-			</ul>
-			<ul>
-				<li class='media'><a href=#><span>Twitter</span></a></li>
-			</ul>
-		</div>
-		<!--<div class="top">
-			<h1>This is Bear's test webpage</h1>
-		</div>-->
-		<div class="side">
 			<div class="container">
-				<p><a href="entry1.html">Test entry 1</a></p>
-				<p><a href="entry2.html">Test entry 2</a></p>
-				<p><a href="entry3.html">Test entry 3</a></p>
-				<p><a href="grapevine.html">What if the entry name was super long like a space elevator?</a></p>
+				<ul class="pull-left">
+				   <li class='active'><a href='main.html'><span>Home</span></a></li>
+				   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
+				   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
+				   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
+				</ul>
+				<ul class="pull-right">
+					<li class='image'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
+					<li class='last'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
+				</ul>
 			</div>
 		</div>
 		<div class="main">
