added linkedin link to menu

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 				</ul>
 				<ul class="pull-right">
 					<li class='image'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
-					<li class='last'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
+					<li class='last'><a href="https://ca.linkedin.com/in/jason-wang-14b159a2" target="_newtab"><img src=linkedin.png></a></li>
 				</ul>
 			</div>
 		</div>
