changed formatting of all pages to be like main page and added a  picture of myself

--- a/entry3.html
+++ b/entry3.html
@@ -12,9 +12,9 @@
 		<div id='cssmenu'>
 			<div class="container">
 				<ul class="pull-left">
-				   <li class='active'><a href='main.html'><span>Home</span></a></li>
+				   <li><a href='main.html'><span>Home</span></a></li>
 				   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
-				   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
+				   <li class='active'><a href='entry3.html'><span>Test Entry 3</span></a></li>
 				   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
 				</ul>
 				<ul class="pull-right">
@@ -25,26 +25,16 @@
 		</div>
 		<div class="main">
 			<div class="container">
-				<h2>Hello.</h2>
-				<div class="pic"><img src=bear7.jpg></div>
-				<div class="para1">
-					<p>My name is Jason. <br>About me: I am 23 years old, male, blood type AB, loves clam digging on the beach. There are two primary reasons why there is a website here.</p>
+				<h2>Introduction</h2>
+				<p>There are two primary reasons why there is a website here.</p>
 				<br></br>
-				</div>
 				<p><b>1. To improve my writing skills.</b> Whenever I read a book or short story, I am envious of the author's ability to efficiently express ideas and strong imagery through their words. Myself on the other hand, posesses the literary finesse of a lame duck attempting ballet. If I write more often, I should get better, in theory. Practice makes better.</p>
 				<br></br>
 				<p><b>2. To practice HTML/CSS/Javascript.</b> I like the idea of being capable of independently creating things. Web development is a powerful tool that allows me to translate any funky ideas I get into something tangible. I have a proven terrible eye for design. I will try my best, and this website will inevitably look like (todo: think of a word more encouraging and less offensive than "trash").</p>
 				<p>I don't know what to write about. 
 				<br></br>
+				<p><a href="main.html">Go back</a></p>
 			</div>
-
-			<div class="today">
-				<script src="clock.js"></script>
-
-				<p id="time"></p>
-
-			</div>
-
 		</div>
 	</body>
 </html>
