added travel section

--- a/entry2.html
+++ b/entry2.html
@@ -8,12 +8,12 @@
 		<script src="notmine.jquery-latest.min.js" type="text/javascript"></script>
    		<script src="script.js"></script>
 	</head>
-	<body>
+	<body style="background-color:#eedfcc">
 		<div id='cssmenu'>
 			<div class="container">
 				<ul class="pull-left">
 				   <li><a href='main.html'><span>Home</span></a></li>
-				   <li class='active'><a href='entry2.html'><span>Test Entry 2</span></a></li>
+				   <li class='active'><a href='entry2.html'><span>Travels</span></a></li>
 				   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
 				   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
 				</ul>
@@ -25,7 +25,24 @@
 		</div>
 		<div class="main">
 			<div class="container">
-				<h2>There doesn't seem to be anything here</h2>
+				<div class="travel">
+					<h2>Travels: Puerto Rico</h2>
+					<p>During the UWaterloo reading week of 2015, a group of friends and I went on a six day trip to Puerto Rico. Having never been to a spanish-dominant territory before (not counting the 5 minutes I spent beyond the Mexico border), I had no expectations for the local landscape and culture.</p>
+
+					<p>Upon landing, I found the local 20&deg;C temperature to be a pleasant change from the subzero state of Waterloo, Ontario. This prompted the immediate discarding of my thick jeans onto the airport floor, and I slipped into a comfortable pair of swimming shorts. I kept the jeans. Looking around, I saw lush forests and heavy fog. We rented cars and drove towards our B&amp;B location. </p>
+					<br><br>
+					<h2>Food</h2>
+					<p>Every family restaurant, fine dining restaurant, and fast food restaurant will have fried plantains somewhere on their menu. It is a local favorite, also locally referred to as "Mofongo", which strangely feels like something I would name a pet monkey. It looks like a banana but tastes like a potato; carbs-y with no traces of sweetness. I wasn't a huge fan, but moreso because I was trying to diet at the time rather than any demirit of its taste. You'll probably have a hard time avoiding giving it a try if you're ever there - its literally everywhere.
+					<br><br>
+					The variety of food and restaurants we tried in Puerto Rico was polarizing. We carried a wing-it mentality that prevented us from doing initial research on where we wanted to eat. I was surprised to find out 90% of restaurants closed at 6PM and refused us entry with our post-6PM-money. It seems the working class of Peurto Rico figured out how to lead a happy life. As a result, it usually took our starving selves a good 2 hours to find an open food establishment. 
+					<br><br>
+					One restaurant had 3 out of 20 or so tables filled. We were seated and ordered our food at 7PM, but did not arrive until 8:20PM. This does not make starving young adults happy. I shared a 30$ fish with a friend, but it ended up being not too big and not too adequate to sooth our maddenning desire to fill our stomachs. Afterwards, we took another swing by a nearby McDonalds and my impression of the chain's reliability to serve cheap and filling food skyrocketed. 
+					<br><br>
+					On another day, we went to another local restaurant (again, starving) and I ordered a seafood jambalaya plate for 20$. The gargantuan plate that was served infront of me was enough to feed a small greek family for two meals. The seasoned rice, local shellfish, and mofongo entered my mouth at breakneck speeds. There was enough to feed my friends, and we also had leftovers for the next breakfast. We also had some pizza elsewhere and it was pretty awesome. 
+					<br><br>
+					<h2>Memorable Moments</h2>
+				</div>
+
 				<p><a href="main.html">Go back</a></p>
 			</div>
 		</div>
