--- a/main.html
+++ b/main.html
@@ -8,36 +8,37 @@
 		<script src="notmine.jquery-latest.min.js" type="text/javascript"></script>
    		<script src="script.js"></script>
 	</head>
-	<body>
-		<div id='cssmenu'>
-			<div class="container">
-				<ul class="pull-left">
-				   <li class='active'><a href='main.html'><span>Home</span></a></li>
-				   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
-				   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
-				   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
-				</ul>
-				<ul class="pull-right">
-					<li class='image'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
-					<li class='last'><a href="https://ca.linkedin.com/in/jason-wang-14b159a2" target="_newtab"><img src=linkedin.png></a></li>
-				</ul>
-			</div>
-		</div>
+	<body style="background-color:#eedfcc;">
 		<div class="main">
+			<div id='cssmenu'>
+				<div class="container">
+					<ul class="pull-left">
+					   <li class='active'><a href='main.html'><span>Home</span></a></li>
+					   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
+					   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
+					   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
+					</ul>
+					<ul class="pull-right">
+						<li class='image'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
+						<li class='last'><a href="https://ca.linkedin.com/in/jason-wang-14b159a2" target="_newtab"><img src=linkedin.png></a></li>
+					</ul>
+				</div>
+			</div>
+
 			<div class="container">
 				<h2>Hello.</h2>
 				<div class="pic"><img src=bear7.jpg></div>
 				<div class="para1">
-					<p>My name is Jason. <br>About me: I am 23 years old, male, blood type AB, loves clam digging on the beach. There are two primary reasons why there is a website here.</p>
-				<br></br>
-				</div>
-				<p><b>1. To improve my writing skills.</b> Whenever I read a book or short story, I am envious of the author's ability to efficiently express ideas and strong imagery through their words. Myself on the other hand, posesses the literary finesse of a lame duck attempting ballet. If I write more often, I should get better, in theory. Practice makes better.</p>
-				<br></br>
-				<p><b>2. To practice HTML/CSS/Javascript.</b> I like the idea of being capable of independently creating things. Web development is a powerful tool that allows me to translate any funky ideas I get into something tangible. I have a proven terrible eye for design. I will try my best, and this website will inevitably look like (todo: think of a word more encouraging and less offensive than "trash").</p>
-				<p>I don't know what to write about. 
-				<br></br>
+					<p>My name is Jason. <br>About me: I am 23 years old, male, blood type AB, loves to go clam digging on the beach. There are two primary reasons why there is a webpage here.</p>
+					<br></br>
+					</div>
+					<p><b>1. To improve my writing skills.</b> Whenever I read a book or short story, I am envious of the author's ability to efficiently express ideas and strong imagery through their words. Myself on the other hand, posesses the literary finesse of a lame duck attempting ballet. If I write more often, I should get better, in theory. Practice makes better.</p>
+					<br></br>
+					<p><b>2. To practice HTML/CSS/Javascript.</b> I like the idea of being capable of independently creating things. Web development is a powerful skill that allows me to translate any funky ideas I get into something tangible. I have a no design experience, but I will try my best.</p>
+					<br></br>
+					<p>I don't know what to write about. 
+					<br></br>
 			</div>
-
 			<div class="today">
 				<script src="clock.js"></script>
 
