added Puerto Rico blog with pictures

--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,12 @@
 		</div>
 		<div class="main">
 			<div class="container">
-				<h2>There doesn't seem to be anything here</h2>
-				<p><a href="main.html">Go back</a></p>
+				<h2>Why would you want to contact me?</h2>
+				<p><ul>
+					<li><a href="https://twitter.com/TheHidingBear">@thehidingbear</a></li>
+					<li><a href="https://ca.linkedin.com/in/jason-wang-14b159a2">LinkedIn</a></li>
+					<li>Email: jason.wang124@gmail.com</li>
+				</ul></p>
 			</div>
 		</div>
 	</body>
