changed rest of html files to link to index

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 		<div id='cssmenu'>
 			<div class="container">
 				<ul class="pull-left">
-				   <li><a href='main.html'><span>Home</span></a></li>
+				   <li><a href='index.html'><span>Home</span></a></li>
 				   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
 				   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
 				   <li class='active' class='last'><a href='contact.html'><span>Contact</span></a></li>
@@ -26,11 +26,10 @@
 		<div class="main">
 			<div class="container">
 				<h2>Why would you want to contact me?</h2>
-				<p><ul>
+				<ul>
 					<li><a href="https://twitter.com/TheHidingBear">@thehidingbear</a></li>
 					<li><a href="https://ca.linkedin.com/in/jason-wang-14b159a2">LinkedIn</a></li>
-					<li>Email: jason.wang124@gmail.com</li>
-				</ul></p>
+				</ul>
 			</div>
 		</div>
 	</body>
