--- a/entry2.html
+++ b/entry2.html
@@ -12,7 +12,7 @@
 		<div id='cssmenu'>
 			<div class="container">
 				<ul class="pull-left">
-				   <li><a href='main.html'><span>Home</span></a></li>
+				   <li><a href='index.html'><span>Home</span></a></li>
 				   <li class='active'><a href='entry2.html'><span>Travels</span></a></li>
 				   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
 				   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
@@ -61,7 +61,7 @@
 					<p>On another day, we went to another local restaurant (again, starving) and I ordered a seafood jambalaya plate for 20$. The gargantuan plate that was served infront of me was enough to feed a small greek family for two meals. The seasoned rice, local shellfish, and mofongo entered my mouth at breakneck speeds. There was enough to feed my friends, and we also had leftovers for the next breakfast. We also had some pizza elsewhere and it was pretty awesome. </p>
 				</div>
 
-				<p><a href="main.html">Go back</a></p>
+				<p><a href="index.html">Go back</a></p>
 			</div>
 		</div>
 	</body>
