Added picture slideshow to PR pictuures

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 				<div class="container">
 					<ul class="pull-left">
 					   <li class='active'><a href='index.html'><span>Home</span></a></li>
-					   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
-					   <li><a href='entry3.html'><span>Test Entry 3</span></a></li>
-					   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
+					   <li><a href='entry2.html'><span>Travel</span></a></li>
+					   <li class='last'><a href='entry3.html'><span>JS Tests</span></a></li>
 					</ul>
 					<ul class="pull-right">
 						<li class='image'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
