--- a/entry3.html
+++ b/entry3.html
@@ -8,14 +8,13 @@
 		<script src="notmine.jquery-latest.min.js" type="text/javascript"></script>
    		<script src="script.js"></script>
 	</head>
-	<body>
+	<body style="background-color:#eedfcc">
 		<div id='cssmenu'>
 			<div class="container">
 				<ul class="pull-left">
 				   <li><a href='index.html'><span>Home</span></a></li>
-				   <li><a href='entry2.html'><span>Test Entry 2</span></a></li>
-				   <li class='active'><a href='entry3.html'><span>Test Entry 3</span></a></li>
-				   <li class='last'><a href='contact.html'><span>Contact</span></a></li>
+				   <li><a href='entry2.html'><span>Travel</span></a></li>
+				   <li class='active' class='last'><a href='entry3.html'><span>JS Tests</span></a></li>
 				</ul>
 				<ul class="pull-right">
 					<li class='image'><a href="https://twitter.com/TheHidingBear" target="_newtab"><img src=twitter.png></a></li>
@@ -25,7 +24,7 @@
 		</div>
 		<div class="main">
 			<div class="container">
-				<p>There doesn't seem to be anything here</p>
+				<p>There doesn't seem to be anything here yet. I am working on it!</p>
 				<p><a href="index.html">Go back</a></p>
 			</div>
 		</div>
